--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-discord.py>=1.6.0
+discord.py==2.0.1
 redis~=3.5.3
-aiohttp~=3.6.2
+aiohttp>=3.7.4
 requests~=2.24.0
 SQLAlchemy~=1.3.18
+python-dotenv==1.0.0
 
 PyYAML~=5.3.1
