stop google cloud deploys

--- a/.github/workflows/deploy-docker-gcp.yaml
+++ b/.github/workflows/deploy-docker-gcp.yaml
@@ -3,8 +3,8 @@ name: Deploy
 on:
   push:
     branches:
-    - master
-
+    # - master
+    - none
 env:
   # Deployment
   PROJECT_ID: ${{ secrets.GCE_PROJECT }}
