--- a/.github/workflows/deploy-gce.yml
+++ b/.github/workflows/deploy-gce.yml
@@ -17,8 +17,8 @@ name: Build and Deploy to Google Compute Engine
 on:
   push:
     branches:
-    - 'master'
-    - 'gotosleep'
+    # - 'master'
+    - none
 
 env:
   # Deployment
