--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
-# Application Secrets
+# Required application secrets
 DISCORD_BOT_TOKEN=
 OWNER_ID=
+
+# twitcasting
 TWITCAST_CLIENT_ID=
 TWITCAST_CLIENT_SECRET=
 TWITCAST_ACCESS_TOKEN=
