--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
 discord.py==2.0.1
-redis~=3.5.3
-aiohttp>=3.7.4
-requests~=2.24.0
-SQLAlchemy~=1.3.18
+aiohttp==3.7.4
+requests==2.24.0
 python-dotenv==1.0.0
