add postgres and basic github action deploy for railway

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,14 @@ DISCORD_BOT_TOKEN=
 OWNER_ID=
 TESTING_GUILD_ID=
 
+# Database
+DATABASE_URL=
+PGDATABASE=
+PGHOST=
+PGPORT=
+PGUSER=
+PGPASSWORD=
+
 # twitcasting
 TWITCAST_CLIENT_ID=
 TWITCAST_CLIENT_SECRET=
