--- a/.github/workflows/deploy-railway.yaml
+++ b/.github/workflows/deploy-railway.yaml
@@ -12,11 +12,11 @@ jobs:
     
     steps:
     - name: Set up pyway 
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '3.8' 
-      - run: pip install pyway
+      uses: actions/checkout@v3
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.8' 
+      run: pip install pyway
 
     - name: Run pyway
       run: |
