--- a/.github/workflows/deploy-railway.yaml
+++ b/.github/workflows/deploy-railway.yaml
@@ -42,6 +42,12 @@ jobs:
     - name: Set up Railway CLI
       run: curl -fsSL cli.new | sh
 
+    - name: Status
+      run: railway status
+      env: 
+        RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+        COMMIT_HASH: ${{ github.sha }} # i just want to know how to get this into the deployment
+
     - name: Deploy
       run: railway up
       env: 
