--- a/.github/workflows/deploy-railway.yaml
+++ b/.github/workflows/deploy-railway.yaml
@@ -40,7 +40,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Set up Railway CLI
-      run: curl -fsSL cli.new | sh
+      run: bash <(curl -fsSL cli.new)
 
     - name: Deploy
       run: railway up --service zhenpai
