--- a/.github/workflows/deploy-railway.yaml
+++ b/.github/workflows/deploy-railway.yaml
@@ -30,22 +30,22 @@ jobs:
       - name: Flyway Validate
         run: flyway validate
 
-  deploy:
-    name: Deploy to Railway
-    runs-on: ubuntu-latest
-    needs: migration
+  # deploy:
+  #   name: Deploy to Railway
+  #   runs-on: ubuntu-latest
+  #   needs: migration
 
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+  #   steps:
+  #   - name: Checkout
+  #     uses: actions/checkout@v3
 
-    - name: Set up Railway CLI
-      run: bash <(curl -fsSL https://railway.app/install.sh)
+  #   - name: Set up Railway CLI
+  #     run: bash <(curl -fsSL https://railway.app/install.sh)
 
-    - name: Deploy
-      run: railway up --service zhenpai
-      env: 
-        RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-        COMMIT_HASH: ${{ github.sha }}
-        # This should be infered, but let's add it anyways
-        RAILWAY_DOCKERFILE_PATH: Dockerfile
+  #   - name: Deploy
+  #     run: railway up --service zhenpai
+  #     env: 
+  #       RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+  #       COMMIT_HASH: ${{ github.sha }}
+  #       # This should be infered, but let's add it anyways
+  #       RAILWAY_DOCKERFILE_PATH: Dockerfile
