initial cs2 vibe code

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,10 @@ PGHOST=
 PGPORT=
 PGUSER=
 PGPASSWORD=
+
+# CS2 MySQL match data db variables
+MYSQL_HOST=
+MYSQL_PORT=
+MYSQL_USER=
+MYSQL_PASSWORD=
+MYSQL_DATABASE=
