add ephemeral points command

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,9 @@ MYSQL_USER=
 MYSQL_PASSWORD=
 MYSQL_DATABASE=
 
+# cogs.points
+CS2_POINTS_GRAPH_URL=
+
 # cogs.cs2
 LIVE_MATCH_CHANNEL_ID=
 GUELO_TEAMS_JSON_URL=
