--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,6 @@
 DISCORD_BOT_TOKEN=
 OWNER_ID=
 TESTING_GUILD_ID=
-APEX_API_KEY=
-CS2_POINTS_GRAPH_URL=
 
 # Database
 DATABASE_URL=
@@ -19,6 +17,9 @@ MYSQL_PORT=
 MYSQL_USER=
 MYSQL_PASSWORD=
 MYSQL_DATABASE=
+
+# cogs.apex
+APEX_API_KEY=
 
 # cogs.points
 CS2_POINTS_GRAPH_URL=
