--- a/.env.example
+++ b/.env.example
@@ -22,8 +22,7 @@ MYSQL_DATABASE=
 APEX_API_KEY=
 
 # cogs.riot
-RIOT_API_KEY=
-TFT_OP_GG_BASE_URL=
+TFT_TOOLS_BASE_URL=
 
 # cogs.points
 CS2_POINTS_GRAPH_URL=
